Serve HTML by template
Instead of serving HTML as file, serve them with HTML template
rendering of golang.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,9 +27,6 @@
 <input name='to_send' type="text" />
 <button type="submit">Submit</button>
 </form>
-<!--
-<script src="./assets/js/common.js"></script>
--->
-<script src="http://localhost:8080/assets/js/common.js"></script>
+<script src="{{ .ScriptPath }}/assets/js/common.js"></script>
 </body>
 </html>
