Prepare to refactor with redux
* Refactor HTML into Room.js container.
* Remove dummy containers Hello.js and ChildHello.js
* Added Rooms.js container for room listing.
* Refactor styles to adapt the changes.
* Rebuilt assets for the change.
* Renamed ActivityStore as RoomActivityStore.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,13 +4,7 @@
 <title>Testing</title>
 </head>
 <body>
-<div id="hello"></div>
-<div id="messages">
-</div>
-<form id='chatbox'>
-<input name='to_send' type="text" />
-<button type="submit">Submit</button>
-</form>
+<div id="app">Loading...</div>
 <script src="{{ .ScriptPath }}/assets/js/common.js"></script>
 </body>
 </html>
