--- a/assets/src/html/index.html
+++ b/assets/src/html/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Tomato RPG</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
   <div id="app">Loading...</div>
