--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Testing</title>
+  <title>Tomato RPG</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>
-<div id="app">Loading...</div>
-<script src="{{ .ScriptPath }}/assets/js/common.js"></script>
+  <div id="app">Loading...</div>
+  <script src="{{ .ScriptPath }}/assets/js/common.js"></script>
 </body>
 </html>
