webpack: bundle bootstrap and extracts into app.css
* bundle bootstrap css into app.css.
* when in production mode, extracts css into `assets/src/css/app.css`.
* add route for `/assets/css/app.css`.
* fix #46.

--- a/assets/src/html/index.html
+++ b/assets/src/html/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Tomato RPG</title>
   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" type="text/css" href="/assets/css/app.css">
 </head>
 <body>
   <div id="app">Loading...</div>
