--- a/assets/src/html/login.html
+++ b/assets/src/html/login.html
@@ -3,6 +3,7 @@
 <head>
 <title>{{ .PageTitle }}</title>
 <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon"/>
+<link rel="stylesheet" type="text/css" href="/assets/css/app.css">
 <style>
 body { margin: 0; font-family: san-serif; background-color: #EEE; }
 h1 { font-size: 1.3em; margin: 1em 0 2em; text-align: center; }
